clusters/infra/dev/test-app/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: echo
spec:
  containers:
    - name: curl
      image: curlimages/curl
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          cpu: "25m"
          memory: "64Mi"
        requests:
          cpu: "25m"
          memory: "64Mi"
