clusters/infra/dev/test-app/echo3.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo3
  namespace: echo
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: echo3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo3
  namespace: echo
spec:
  selector:
    matchLabels:
      app: echo3
  replicas: 1
  template:
    metadata:
      labels:
        app: echo3
    spec:
      containers:
        - name: echo3
          image: hashicorp/http-echo
          args:
            - "-text=bonjour le monde"
          ports:
            - containerPort: 5678
          resources:
            limits:
              cpu: "100m"
              memory: "32Mi"
            requests:
              cpu: "50m"
              memory: "16Mi"
