clusters/infra/dev/test-app/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: echo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - echo1.1a4.co
    - echo2.1a4.co
    - echo.1a4.co
    secretName: echo-tls
  ingressClassName: nginx
  rules:
    - host: echo1.1a4.co
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echo1
                port:
                  number: 80
    - host: echo2.1a4.co
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echo2
                port:
                  number: 80
    - host: echo.1a4.co
      http:
        paths:
          - pathType: Prefix
            path: /echo
            backend:
              service:
                name: echo3
                port:
                  number: 80
