clusters/infra/dev/test-app/echo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: echo
spec:
  rules:
  - host: echo1.1a4.co
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: echo1
              namespace: echo
              port:
                number: 80
  - host: echo2.1a4.co
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: echo2
              namespace: echo
              port:
                number: 80
